(library
 (name bindings)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name x)
  (build_flags_resolver
   (vendored
    (c_flags :standard)
    (c_library_flags :standard)))
  (headers
   (include "sys/types.h" "dirent.h" "unistd.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
